@@ -1,4 +1,5 @@
 * Add tests for scan_line (Alexandr Ciornii)
+* RT#48151 fixed, "require __PACKAGE__" should not die (Alexandr Ciornii)
 
 [Changes for 0.93 - 2009-07-19]
 * Implement caching of dependencies (Christoph Lamprecht)
